refactor(workflow): 从 Flowable 迁移到 FlowLong 工作流引擎
- 移除 Flowable BPMN 设计器及相关前端组件
- 移除 Flowable 后端配置、监听器、委托类
- 新增 FlowLong 工作流引擎配置和集成代码
- 新增仿钉钉流程设计器前端组件
- 修改 DTO、实体、服务层以适配 FlowLong API
- 新增数据库迁移脚本创建 FlowLong 相关表结构