@@ -1,6 +1,10 @@
 package com.forge.modules.workflow.service.impl;
 
 import cn.hutool.core.util.StrUtil;
+import com.aizuda.bpm.engine.ProcessService;
+import com.aizuda.bpm.engine.QueryService;
+import com.aizuda.bpm.engine.core.FlowCreator;
+import com.aizuda.bpm.engine.entity.FlwProcess;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -12,27 +16,29 @@ import com.forge.modules.workflow.dto.model.ModelQueryRequest;
 import com.forge.modules.workflow.dto.model.ModelRequest;
 import com.forge.modules.workflow.dto.model.ModelResponse;
 import com.forge.modules.workflow.entity.WfCategory;
-import com.forge.modules.workflow.entity.WfProcessDeployExt;
-import com.forge.modules.workflow.identity.FlowableIdentityService;
+import com.forge.modules.workflow.entity.WfProcessExt;
+import com.forge.modules.workflow.identity.FlowLongIdentityService;
 import com.forge.modules.workflow.mapper.WfCategoryMapper;
-import com.forge.modules.workflow.mapper.WfProcessDeployExtMapper;
+import com.forge.modules.workflow.mapper.WfProcessExtMapper;
 import com.forge.modules.workflow.service.WfModelService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.flowable.engine.RepositoryService;
-import org.flowable.engine.repository.Deployment;
-import org.flowable.engine.repository.Model;
-import org.flowable.engine.repository.ModelQuery;
-import org.flowable.engine.repository.ProcessDefinition;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.io.ByteArrayInputStream;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
- * 流程模型管理服务实现
+ * 流程模型管理服务实现 - FlowLong 版本
+ *
+ * FlowLong 没有独立的模型表，使用 wf_process_ext 表存储模型草稿：
+ * - 未部署的模型：process_id = null，表示草稿状态
+ * - 已部署的模型：process_id 有值，关联 flw_process 表
  *
  * @author forge-admin
  */
@@ -41,39 +47,43 @@ import java.util.List;
 @RequiredArgsConstructor
 public class WfModelServiceImpl implements WfModelService {
 
-    private final RepositoryService repositoryService;
-    private final WfProcessDeployExtMapper wfProcessDeployExtMapper;
-    private final WfCategoryMapper wfCategoryMapper;
-    private final FlowableIdentityService flowableIdentityService;
+    private final ProcessService processService;
+    private final QueryService queryService;
+    private final WfProcessExtMapper processExtMapper;
+    private final WfCategoryMapper categoryMapper;
+    private final FlowLongIdentityService identityService;
     private final ObjectMapper objectMapper;
 
     @Override
     public Page<ModelResponse> pageModel(ModelQueryRequest request) {
-        ModelQuery query = repositoryService.createModelQuery();
+        // 查询 wf_process_ext 表，筛选 process_id = null 的草稿模型
+        LambdaQueryWrapper<WfProcessExt> wrapper = new LambdaQueryWrapper<>();
+        wrapper.isNull(WfProcessExt::getProcessId)  // 草稿状态：未关联流程定义
+                .eq(WfProcessExt::getDeleted, 0);
 
         if (StrUtil.isNotBlank(request.getName())) {
-            query.modelNameLike("%" + request.getName() + "%");
+            wrapper.like(WfProcessExt::getProcessName, request.getName());
         }
         if (StrUtil.isNotBlank(request.getKey())) {
-            query.modelKey(request.getKey());
+            wrapper.eq(WfProcessExt::getProcessKey, request.getKey());
         }
-        if (StrUtil.isNotBlank(request.getCategory())) {
-            query.modelCategory(request.getCategory());
+        if (request.getCategoryId() != null) {
+            wrapper.eq(WfProcessExt::getCategoryId, request.getCategoryId());
         }
-        query.orderByLastUpdateTime().desc();
 
-        long total = query.count();
-        int offset = (request.getPageNum() - 1) * request.getPageSize();
-        List<Model> models = query.listPage(offset, request.getPageSize());
+        wrapper.orderByDesc(WfProcessExt::getUpdateTime);
 
-        List<ModelResponse> records = models.stream()
+        Page<WfProcessExt> pageParam = new Page<>(request.getPageNum(), request.getPageSize());
+        Page<WfProcessExt> extPage = processExtMapper.selectPage(pageParam, wrapper);
+
+        List<ModelResponse> records = extPage.getRecords().stream()
                 .map(this::convertToResponse)
-                .toList();
+                .collect(Collectors.toList());
 
         Page<ModelResponse> resultPage = new Page<>();
-        resultPage.setCurrent(request.getPageNum());
-        resultPage.setSize(request.getPageSize());
-        resultPage.setTotal(total);
+        resultPage.setCurrent(extPage.getCurrent());
+        resultPage.setSize(extPage.getSize());
+        resultPage.setTotal(extPage.getTotal());
         resultPage.setRecords(records);
 
         return resultPage;
@@ -81,16 +91,18 @@ public class WfModelServiceImpl implements WfModelService {
 
     @Override
     public ModelResponse getModelById(String id) {
-        Model model = repositoryService.getModel(id);
-        if (model == null) {
+        Long extId = parseId(id);
+
+        WfProcessExt ext = processExtMapper.selectById(extId);
+        if (ext == null) {
             throw new BusinessException(404, "模型不存在");
         }
-        ModelResponse response = convertToResponse(model);
 
-        // 加载编辑器源内容（BPMN XML）
-        byte[] editorSource = repositoryService.getModelEditorSource(id);
-        if (editorSource != null) {
-            response.setBpmnXml(new String(editorSource, StandardCharsets.UTF_8));
+        ModelResponse response = convertToResponse(ext);
+
+        // 加载流程模型内容
+        if (StrUtil.isNotBlank(ext.getModelJson())) {
+            response.setModelJson(ext.getModelJson());
         }
 
         return response;
@@ -99,327 +111,250 @@ public class WfModelServiceImpl implements WfModelService {
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void createModel(ModelRequest request) {
-        // 构建元信息 JSON
+        Long currentUserId = SecurityUtils.getCurrentUserId();
+        if (currentUserId == null) {
+            throw new BusinessException(401, "未获取到当前用户信息");
+        }
+
+        String userName = identityService.getUserName(currentUserId);
+
+        // 检查 key 是否重复
+        LambdaQueryWrapper<WfProcessExt> checkWrapper = new LambdaQueryWrapper<>();
+        checkWrapper.eq(WfProcessExt::getProcessKey, request.getKey())
+                .isNull(WfProcessExt::getProcessId)
+                .eq(WfProcessExt::getDeleted, 0);
+        if (processExtMapper.selectCount(checkWrapper) > 0) {
+            throw new BusinessException(400, "流程标识已存在");
+        }
+
+        // 构建 metaInfo
         ObjectNode metaInfoNode = objectMapper.createObjectNode();
         metaInfoNode.put("name", request.getName());
         if (StrUtil.isNotBlank(request.getDescription())) {
             metaInfoNode.put("description", request.getDescription());
         }
-        // 合并前端传入的 metaInfo（包含 formType、formId）
-        mergeMetaInfo(metaInfoNode, request.getMetaInfo());
+        if (request.getFormType() != null) {
+            metaInfoNode.put("formType", request.getFormType());
+        }
+        if (request.getFormId() != null) {
+            metaInfoNode.put("formId", request.getFormId());
+        }
+        if (request.getAutoCopyStrategy() != null) {
+            metaInfoNode.put("autoCopyStrategy", request.getAutoCopyStrategy());
+        }
+        if (StrUtil.isNotBlank(request.getAutoCopyParam())) {
+            metaInfoNode.put("autoCopyParam", request.getAutoCopyParam());
+        }
 
-        Model model = repositoryService.newModel();
-        model.setName(request.getName());
-        model.setKey(request.getKey());
-        model.setCategory(request.getCategory());
-        model.setVersion(1);
-        model.setMetaInfo(metaInfoNode.toString());
+        // 创建模型草稿（存储在 wf_process_ext 表，process_id = null）
+        WfProcessExt ext = new WfProcessExt();
+        ext.setProcessId(null);  // 草稿状态，未关联流程定义
+        ext.setProcessKey(request.getKey());
+        ext.setProcessName(request.getName());
+        ext.setCategoryId(request.getCategoryId());
+        ext.setDescription(request.getDescription());
+        ext.setFormType(request.getFormType());
+        ext.setFormId(request.getFormId());
+        ext.setAutoCopyStrategy(request.getAutoCopyStrategy());
+        ext.setAutoCopyParam(request.getAutoCopyParam());
+        ext.setMetaInfo(metaInfoNode.toString());
+        ext.setCreateBy(currentUserId);
+        ext.setCreateByName(userName);
+        ext.setCreateTime(LocalDateTime.now());
+        ext.setUpdateTime(LocalDateTime.now());
+        ext.setDeleted(0);
+        processExtMapper.insert(ext);
 
-        repositoryService.saveModel(model);
-
-        // 创建初始 BPMN XML（空白流程：开始事件 -> 结束事件）
-        String initialBpmnXml = buildInitialBpmnXml(request.getKey(), request.getName());
-        repositoryService.addModelEditorSource(model.getId(),
-                initialBpmnXml.getBytes(StandardCharsets.UTF_8));
-
-        log.info("创建模型成功：id={}, name={}, key={}", model.getId(), request.getName(), request.getKey());
+        log.info("创建模型成功：id={}, name={}, key={}", ext.getId(), request.getName(), request.getKey());
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void updateModel(ModelRequest request) {
-        if (StrUtil.isBlank(request.getId())) {
+        if (request.getId() == null) {
             throw new BusinessException(400, "模型ID不能为空");
         }
 
-        Model model = repositoryService.getModel(request.getId());
-        if (model == null) {
+        Long extId = parseId(request.getId().toString());
+        WfProcessExt ext = processExtMapper.selectById(extId);
+        if (ext == null) {
             throw new BusinessException(404, "模型不存在");
         }
 
-        model.setName(request.getName());
-        model.setKey(request.getKey());
-        model.setCategory(request.getCategory());
+        // 已部署的模型不允许修改基本信息
+        if (ext.getProcessId() != null) {
+            throw new BusinessException(400, "已部署的模型不允许修改基本信息");
+        }
 
-        // 构建元信息
+        Long currentUserId = SecurityUtils.getCurrentUserId();
+        String userName = identityService.getUserName(currentUserId);
+
+        ext.setProcessName(request.getName());
+        ext.setProcessKey(request.getKey());
+        ext.setCategoryId(request.getCategoryId());
+        ext.setDescription(request.getDescription());
+        ext.setFormType(request.getFormType());
+        ext.setFormId(request.getFormId());
+        ext.setAutoCopyStrategy(request.getAutoCopyStrategy());
+        ext.setAutoCopyParam(request.getAutoCopyParam());
+        ext.setUpdateTime(LocalDateTime.now());
+
+        // 构建 metaInfo
         ObjectNode metaInfoNode = objectMapper.createObjectNode();
         metaInfoNode.put("name", request.getName());
         if (StrUtil.isNotBlank(request.getDescription())) {
             metaInfoNode.put("description", request.getDescription());
         }
-        // 合并前端传入的 metaInfo（包含 formType、formId）
-        mergeMetaInfo(metaInfoNode, request.getMetaInfo());
-        model.setMetaInfo(metaInfoNode.toString());
+        if (request.getFormType() != null) {
+            metaInfoNode.put("formType", request.getFormType());
+        }
+        if (request.getFormId() != null) {
+            metaInfoNode.put("formId", request.getFormId());
+        }
+        if (request.getAutoCopyStrategy() != null) {
+            metaInfoNode.put("autoCopyStrategy", request.getAutoCopyStrategy());
+        }
+        if (StrUtil.isNotBlank(request.getAutoCopyParam())) {
+            metaInfoNode.put("autoCopyParam", request.getAutoCopyParam());
+        }
+        ext.setMetaInfo(metaInfoNode.toString());
 
-        repositoryService.saveModel(model);
-
-        // 如果请求包含 BPMN XML，更新编辑器源
-        if (StrUtil.isNotBlank(request.getBpmnXml())) {
-            repositoryService.addModelEditorSource(model.getId(),
-                    request.getBpmnXml().getBytes(StandardCharsets.UTF_8));
+        // 更新 FlowLong JSON 模型内容
+        if (StrUtil.isNotBlank(request.getModelJson())) {
+            ext.setModelJson(request.getModelJson());
         }
 
-        log.info("更新模型成功：id={}, name={}", model.getId(), request.getName());
+        processExtMapper.updateById(ext);
+
+        log.info("更新模型成功：id={}, name={}", ext.getId(), request.getName());
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void deployModel(String id) {
-        Model model = repositoryService.getModel(id);
-        if (model == null) {
+        Long extId = parseId(id);
+        WfProcessExt ext = processExtMapper.selectById(extId);
+        if (ext == null) {
             throw new BusinessException(404, "模型不存在");
         }
 
-        // 获取编辑器源（BPMN XML）
-        byte[] editorSource = repositoryService.getModelEditorSource(id);
-        if (editorSource == null || editorSource.length == 0) {
+        // 已部署的模型不允许重复部署
+        if (ext.getProcessId() != null) {
+            throw new BusinessException(400, "模型已部署，请创建新版本");
+        }
+
+        // 获取流程模型内容
+        String modelContent = ext.getModelJson();
+        if (StrUtil.isBlank(modelContent)) {
             throw new BusinessException(400, "模型内容为空，请先设计流程");
         }
 
-        String bpmnXml = new String(editorSource, StandardCharsets.UTF_8);
-        if (StrUtil.isBlank(bpmnXml)) {
-            throw new BusinessException(400, "模型内容为空，请先设计流程");
-        }
-
-        // 确保 BPMN XML 中 process 的 id 和 name 与模型一致
-        String processKey = escapeXml(model.getKey());
-        String processName = escapeXml(model.getName());
-
-        // 先移除已有的 name 属性（非贪婪匹配，避免跳过 name）
-        String beforeRemove = bpmnXml;
-        bpmnXml = bpmnXml.replaceFirst(
-                "(<bpmn:process[^>]*?)\\s+name=\"[^\"]*\"",
-                "$1"
-        );
-
-        // 替换 <bpmn:process ... id="xxx" ...> 中的 id 并添加 name
-        String afterStep2 = bpmnXml.replaceFirst(
-                "<bpmn:process([^>]*?)\\s+id=\"[^\"]*\"",
-                "<bpmn:process$1 id=\"" + processKey + "\" name=\"" + processName + "\""
-        );
-
-        // 如果 Step 2 成功替换，使用结果；否则尝试 id 在最前面的情况
-        if (!afterStep2.equals(bpmnXml)) {
-            bpmnXml = afterStep2;
-        } else {
-            bpmnXml = bpmnXml.replaceFirst(
-                    "<bpmn:process\\s+id=\"[^\"]*\"",
-                    "<bpmn:process id=\"" + processKey + "\" name=\"" + processName + "\""
-            );
-        }
-
-        // 设置 Flowable 认证用户
         Long currentUserId = SecurityUtils.getCurrentUserId();
-        String currentUsername = SecurityUtils.getCurrentUsername();
-        flowableIdentityService.setAuthenticatedUserId(currentUserId);
-
-        try {
-            // 部署
-            String deploymentName = model.getName();
-            Deployment deployment = repositoryService.createDeployment()
-                    .name(deploymentName)
-                    .addString(model.getName() + ".bpmn20.xml", bpmnXml)
-                    .category(model.getCategory())
-                    .key(model.getKey())
-                    .name(model.getName())
-                    .deploy();
-
-            // 获取新部署的流程定义
-            ProcessDefinition newDefinition = repositoryService.createProcessDefinitionQuery()
-                    .deploymentId(deployment.getId())
-                    .latestVersion()
-                    .singleResult();
-
-            if (newDefinition == null) {
-                repositoryService.deleteDeployment(deployment.getId(), true);
-                throw new BusinessException(400, "BPMN XML内容无效，未能生成流程定义");
-            }
-
-            // 从 metaInfo 解析 formType 和 formId
-            Integer formType = null;
-            Long formId = null;
-            Integer autoCopyStrategy = null;
-            String autoCopyParam = null;
-            String metaInfo = model.getMetaInfo();
-            if (StrUtil.isNotBlank(metaInfo)) {
-                try {
-                    JsonNode metaNode = objectMapper.readTree(metaInfo);
-                    if (metaNode.has("formType")) {
-                        formType = metaNode.get("formType").asInt();
-                    }
-                    if (metaNode.has("formId")) {
-                        formId = metaNode.get("formId").asLong();
-                    }
-                    if (metaNode.has("autoCopyStrategy") && !metaNode.get("autoCopyStrategy").isNull()) {
-                        autoCopyStrategy = metaNode.get("autoCopyStrategy").asInt();
-                    }
-                    if (metaNode.has("autoCopyParam") && !metaNode.get("autoCopyParam").isNull()) {
-                        autoCopyParam = metaNode.get("autoCopyParam").asText();
-                    }
-                } catch (Exception e) {
-                    log.warn("解析模型metaInfo失败：{}", metaInfo, e);
-                }
-            }
-
-            // 从模型分类编码查询分类ID
-            Long categoryId = null;
-            if (StrUtil.isNotBlank(model.getCategory())) {
-                try {
-                    WfCategory category = wfCategoryMapper.selectOne(
-                            new LambdaQueryWrapper<WfCategory>()
-                                    .eq(WfCategory::getCategoryCode, model.getCategory())
-                                    .last("LIMIT 1")
-                    );
-                    if (category != null) {
-                        categoryId = category.getId();
-                    }
-                } catch (Exception e) {
-                    log.warn("查询分类失败：category={}", model.getCategory(), e);
-                }
-            }
-
-            // 保存扩展信息
-            WfProcessDeployExt ext = new WfProcessDeployExt();
-            ext.setDeploymentId(deployment.getId());
-            ext.setProcessDefinitionId(newDefinition.getId());
-            ext.setProcessKey(newDefinition.getKey());
-            ext.setProcessName(model.getName());  // 使用模型名称
-            ext.setCategoryId(categoryId);  // 设置分类ID
-            ext.setFormType(formType);
-            ext.setFormId(formId);
-            ext.setAutoCopyStrategy(autoCopyStrategy);
-            ext.setAutoCopyParam(autoCopyParam);
-            ext.setBpmnXml(bpmnXml);
-            ext.setCreateBy(currentUserId);
-            ext.setCreateByName(currentUsername);
-            ext.setCreateTime(LocalDateTime.now());
-            ext.setUpdateTime(LocalDateTime.now());
-            ext.setDeleted(0);
-            wfProcessDeployExtMapper.insert(ext);
-
-            log.info("模型部署成功：modelId={}, name={}, deploymentId={}, deployBy={}",
-                    id, model.getName(), deployment.getId(), currentUsername);
-        } finally {
-            flowableIdentityService.clearAuthenticatedUserId();
+        if (currentUserId == null) {
+            throw new BusinessException(401, "未获取到当前用户信息");
         }
+
+        String userName = identityService.getUserName(currentUserId);
+        FlowCreator flowCreator = createFlowCreator(currentUserId);
+
+        // 部署流程（使用 FlowLong JSON 格式）
+        InputStream inputStream = new ByteArrayInputStream(modelContent.getBytes(StandardCharsets.UTF_8));
+        Long processId = processService.deploy(inputStream, flowCreator, false, process -> {
+            process.setProcessName(ext.getProcessName());
+            process.setProcessType(ext.getFormType() != null ? String.valueOf(ext.getFormType()) : null);
+            process.setRemark(ext.getDescription());
+        });
+
+        // 获取部署后的流程定义
+        FlwProcess process = processService.getProcessById(processId);
+        if (process == null) {
+            throw new BusinessException(400, "流程部署失败");
+        }
+
+        // 更新扩展表，关联流程定义
+        ext.setProcessId(processId);
+        ext.setUpdateTime(LocalDateTime.now());
+        processExtMapper.updateById(ext);
+
+        log.info("模型部署成功：modelId={}, name={}, processId={}, deployBy={}",
+                extId, ext.getProcessName(), processId, userName);
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void deleteModel(String id) {
-        Model model = repositoryService.getModel(id);
-        if (model == null) {
+        Long extId = parseId(id);
+        WfProcessExt ext = processExtMapper.selectById(extId);
+        if (ext == null) {
             throw new BusinessException(404, "模型不存在");
         }
 
-        repositoryService.deleteModel(id);
-        log.info("模型删除成功：id={}, name={}", id, model.getName());
+        // 已部署的模型不允许直接删除
+        if (ext.getProcessId() != null) {
+            throw new BusinessException(400, "已部署的模型不允许删除，请先删除流程定义");
+        }
+
+        processExtMapper.deleteById(extId);
+
+        log.info("模型删除成功：id={}, name={}", extId, ext.getProcessName());
+    }
+
+    // ========== 私有方法 ==========
+
+    private Long parseId(String id) {
+        try {
+            return Long.parseLong(id);
+        } catch (NumberFormatException e) {
+            throw new BusinessException(400, "ID格式错误");
+        }
+    }
+
+    private FlowCreator createFlowCreator(Long userId) {
+        return new FlowCreator(String.valueOf(userId), identityService.getUserName(userId));
     }
 
     /**
      * 转换为响应对象
      */
-    private ModelResponse convertToResponse(Model model) {
+    private ModelResponse convertToResponse(WfProcessExt ext) {
         ModelResponse response = new ModelResponse();
-        response.setId(model.getId());
-        response.setName(model.getName());
-        response.setKey(model.getKey());
-        response.setCategory(model.getCategory());
-        response.setMetaInfo(model.getMetaInfo());
-        response.setCreateTime(model.getCreateTime());
-        response.setLastUpdateTime(model.getLastUpdateTime());
-        if (model.getVersion() != null) {
-            response.setVersion(model.getVersion().toString());
-        }
+        response.setId(String.valueOf(ext.getId()));
+        response.setName(ext.getProcessName());
+        response.setKey(ext.getProcessKey());
 
-        // 解析 metaInfo 获取 description、formType、formId、autoCopyStrategy、autoCopyParam
-        String metaInfo = model.getMetaInfo();
-        if (StrUtil.isNotBlank(metaInfo)) {
-            try {
-                JsonNode metaNode = objectMapper.readTree(metaInfo);
-                if (metaNode.has("description")) {
-                    response.setDescription(metaNode.get("description").asText());
-                }
-                if (metaNode.has("formType")) {
-                    response.setFormType(metaNode.get("formType").asInt());
-                }
-                if (metaNode.has("formId")) {
-                    response.setFormId(metaNode.get("formId").asLong());
-                }
-                if (metaNode.has("autoCopyStrategy") && !metaNode.get("autoCopyStrategy").isNull()) {
-                    response.setAutoCopyStrategy(metaNode.get("autoCopyStrategy").asInt());
-                }
-                if (metaNode.has("autoCopyParam") && !metaNode.get("autoCopyParam").isNull()) {
-                    response.setAutoCopyParam(metaNode.get("autoCopyParam").asText());
-                }
-            } catch (Exception e) {
-                log.warn("解析模型metaInfo失败：{}", metaInfo, e);
+        // 分类信息
+        if (ext.getCategoryId() != null) {
+            response.setCategoryId(ext.getCategoryId());
+            WfCategory category = categoryMapper.selectById(ext.getCategoryId());
+            if (category != null) {
+                response.setCategoryName(category.getCategoryName());
+                response.setCategory(category.getCategoryCode());
             }
         }
 
-        // 检查是否已部署：通过 key 查找是否有对应的流程定义
-        if (StrUtil.isNotBlank(model.getKey())) {
-            long deployedCount = repositoryService.createProcessDefinitionQuery()
-                    .processDefinitionKey(model.getKey())
-                    .count();
-            response.setDeployed(deployedCount > 0);
+        response.setDescription(ext.getDescription());
+        response.setFormType(ext.getFormType());
+        response.setFormId(ext.getFormId());
+        response.setAutoCopyStrategy(ext.getAutoCopyStrategy());
+        response.setAutoCopyParam(ext.getAutoCopyParam());
+        response.setCreateTime(ext.getCreateTime());
+        response.setLastUpdateTime(ext.getUpdateTime());
+
+        // 解析 metaInfo
+        if (StrUtil.isNotBlank(ext.getMetaInfo())) {
+            try {
+                JsonNode metaNode = objectMapper.readTree(ext.getMetaInfo());
+                if (metaNode.has("description")) {
+                    response.setDescription(metaNode.get("description").asText());
+                }
+            } catch (Exception e) {
+                log.warn("解析模型metaInfo失败：{}", ext.getMetaInfo(), e);
+            }
         }
+
+        // 检查是否已部署
+        response.setDeployed(ext.getProcessId() != null);
 
         return response;
-    }
-
-    /**
-     * 合并前端传入的 metaInfo JSON 到目标节点
-     */
-    private void mergeMetaInfo(ObjectNode target, String metaInfoJson) {
-        if (StrUtil.isBlank(metaInfoJson)) {
-            return;
-        }
-        try {
-            JsonNode source = objectMapper.readTree(metaInfoJson);
-            source.fields().forEachRemaining(entry -> {
-                if (!target.has(entry.getKey())) {
-                    target.set(entry.getKey(), entry.getValue());
-                }
-            });
-        } catch (Exception e) {
-            log.warn("解析metaInfo失败：{}", metaInfoJson, e);
-        }
-    }
-
-    /**
-     * 构建初始 BPMN XML（包含开始事件和结束事件）
-     */
-    private String buildInitialBpmnXml(String processKey, String processName) {
-        return """
-                <?xml version="1.0" encoding="UTF-8"?>
-                <definitions xmlns="http://www.omg.org/spec/BPMN/20100524/MODEL"
-                             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                             xmlns:flowable="http://flowable.org/bpmn"
-                             targetNamespace="http://flowable.org/test">
-                  <process id="%s" name="%s" isExecutable="true">
-                    <startEvent id="startEvent" name="开始"/>
-                    <endEvent id="endEvent" name="结束"/>
-                    <sequenceFlow id="flow1" sourceRef="startEvent" targetRef="endEvent"/>
-                  </process>
-                </definitions>
-                """.formatted(
-                escapeXml(processKey),
-                escapeXml(processName)
-        );
-    }
-
-    /**
-     * XML 特殊字符转义
-     */
-    private String escapeXml(String value) {
-        if (value == null) {
-            return "";
-        }
-        return value.replace("&", "&amp;")
-                .replace("<", "&lt;")
-                .replace(">", "&gt;")
-                .replace("\"", "&quot;")
-                .replace("'", "&apos;");
     }
 }
